--- a/test/fixtures/test.jade
+++ b/test/fixtures/test.jade
@@ -15,6 +15,11 @@ div.faa
   arguments:
     one: hello
     two: world
+  foo: faa
+  beep: boop
+  list:
+    foo
+    faa
 
 mixin foo(one, two)
   p #{one}
