--- a/test/fixtures/test.jade
+++ b/test/fixtures/test.jade
@@ -1,15 +1,15 @@
-//- @jadedoc
+//- @pugdoc
   name: foo
 
 div.foo
 
-//- @jadedoc
+//- @pugdoc
   name: faa
 
 div.faa
 
 
-//- @jadedoc
+//- @pugdoc
   name: mixin
   description: this is a mixin
   arguments:
